--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <p>aristeu roriz</p>
     <ul class="pages">
       <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
-      <li><a href="/posts/"><i class="fa fa-archive"></i> All Posts</a></li>
-      <li><a href="/search/"><i class="fa fa-search"></i> Search</a></li>
+      <li><a href="/posts/"><i class="fa fa-archive"></i> Todos os posts</a></li>
+      <li><a href="/search/"><i class="fa fa-search"></i> Procurar</a></li>
     </ul>
     <p class="links">
       <a href="http://www.twitter.com/Aristeu_Roriz" target="_new"><i class="fa fa-twitter"></i></a>
@@ -141,7 +141,7 @@
 
     <div class="footer clearfix">
   <div class="col-md-6">
-    Made with <i class="fa fa-heart"></i> by <a href="https://twitter.com/Aristeu_Roriz">Aristeu Roriz</a>
+    Desenvolvido <i class="fa fa-gears"></i> por <a href="https://twitter.com/Aristeu_Roriz">Aristeu Roriz</a>
   </div>
   <div class="col-md-6">
     &lt;/&gt; on <a href="https://github.com/aristeuroriz">Github</a> &nbsp;<i class="fa fa-github-alt"></i>
