--- a/search/index.html
+++ b/search/index.html
@@ -46,8 +46,8 @@
     <p>aristeu roriz</p>
     <ul class="pages">
       <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
-      <li><a href="/posts/"><i class="fa fa-archive"></i> All Posts</a></li>
-      <li><a href="/search/"><i class="fa fa-search"></i> Search</a></li>
+      <li><a href="/posts/"><i class="fa fa-archive"></i> Todos os posts</a></li>
+      <li><a href="/search/"><i class="fa fa-search"></i> Procurar</a></li>
     </ul>
     <p class="links">
       <a href="http://www.twitter.com/Aristeu_Roriz" target="_new"><i class="fa fa-twitter"></i></a>
@@ -55,7 +55,7 @@
       <a href="https://plus.google.com/110915414607247343567/" target="_new"><i class="fa fa-google-plus"></i></a>
       <a href="https://github.com/aristeuroriz" target="_new"><i class="fa fa-github-alt"></i></a>
       <a href="http://pt.stackoverflow.com/users/25272/aristeu-roriz" target="_new"><i class="fa fa-stack-overflow"></i></a>
-      <a href="http://www.jacobtomlinson.co.uk/feed.xml" target="_new"><i class="fa fa-rss"></i></a>
+      <a href="http://aristeuroriz.github.io/feed.xml" target="_new"><i class="fa fa-rss"></i></a>
     </p>
   </div>
 </nav>
@@ -67,12 +67,12 @@
       <div class="container-fluid index">
   <div class="row index all-posts">
 
-    <h1 class="header author-header">Search</h1>
+    <h1 class="header author-header">Procurar</h1>
 
     <div id="search-container">
-      <input type="text" id="search-input" placeholder="Type here...">
+      <input type="text" id="search-input" placeholder="Escreva aqui...">
       <div class="col-md-12 content-panel articles">
-        <ul id="results-container"><small>Start typing to see some results</small></ul>
+        <ul id="results-container"><small>Comece a digitar para ver alguns resultados</small></ul>
       </div>
     </div>
 
@@ -98,10 +98,11 @@
 
     <div class="footer clearfix">
   <div class="col-md-6">
-    Made with <i class="fa fa-heart"></i> by <a href="https://twitter.com/Aristeu_Roriz">Aristeu Roriz</a>
+    <!-- Alteração de layout para background branco -->
+      <i class="fa fa-gears"></i> by <a href="https://twitter.com/Aristeu_Roriz">Aristeu Roriz</a>
   </div>
   <div class="col-md-6">
-    &lt;/&gt; on <a href="https://github.com/aristeuroriz">Github</a> &nbsp;<i class="fa fa-github-alt"></i>
+    &lt;/&gt; on <a href="https://github.com/aristeuroriz" target="_new">Github</a> &nbsp;<i class="fa fa-github-alt"></i>
   </div>
 </div>
 
@@ -137,6 +138,7 @@
       s.parentNode.insertBefore(ga, s);
   })();
 </script>
+
 
 
 
