--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="profile" href="http://gmpg.org/xfn/11" />
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" media="all" href="/css/style.css" />
 <link rel="stylesheet" type="text/css" media="all" href="/css/jquery.mmenu.all.css" />
 <link rel="stylesheet" href="/css/highlightjs.piperita.css">
@@ -47,6 +48,8 @@
     <ul class="pages">
       <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
       <li><a href="/posts/"><i class="fa fa-archive"></i> Todos os posts</a></li>
+      <li><a href="/curriculo/"><i class="fa fa-certificate"></i>Currículo</a></li>
+       <li><a href="/contato/"><i class="fa fa-envelope"></i>Contato</a></li>
       <li><a href="/search/"><i class="fa fa-search"></i> Procurar</a></li>
     </ul>
     <p class="links">
@@ -114,6 +117,7 @@
 
     </div>
 </div>
+
       </div>
     </div>
 
