--- a/contato/index.html
+++ b/contato/index.html
@@ -37,6 +37,9 @@
 <meta name="theme-color" content="#ffffff">
 
 
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f07678f30c7ed96"></script>
+
 </head>
 
 
