--- a/search/index.html
+++ b/search/index.html
@@ -49,11 +49,13 @@
   <div>
     <p>aristeu roriz</p>
     <ul class="pages">
-      <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
-      <li><a href="/posts/"><i class="fa fa-archive"></i> Todos os posts</a></li>
-      <li><a href="/curriculo/"><i class="fa fa-certificate"></i>Currículo</a></li>
-       <li><a href="/contato/"><i class="fa fa-envelope"></i>Contato</a></li>
-      <li><a href="/search/"><i class="fa fa-search"></i> Procurar</a></li>
+      <li><a href="/"><i class="fa fa-home fa-2x"></i> Home</a></li>
+      <li><a href="/posts/"><i class="fa fa-archive fa-2x"></i> Todos os posts</a></li>
+      <li><a href="/curriculo/"><i class="fa fa-certificate fa-2x"></i> Currículo</a></li>
+      <li><a href="/portfolio/"><i class="fa fa-laptop fa-2x"></i> Portfólio</a></li>
+      <li><a href="/contato/"><i class="fa fa-envelope fa-2x"></i> Contato</a></li>
+      <li><a href="/imgs/"><i class="fa fa-picture-o fa-2x"></i> Imagens</a></li>
+      <li><a href="/search/"><i class="fa fa-search fa-2x"></i> Procurar</a></li>
     </ul>
     <p class="links">
       <a href="http://www.twitter.com/Aristeu_Roriz" target="_new"><i class="fa fa-twitter"></i></a>
