--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
       <li><a href="/search/"><i class="fa fa-search fa-2x"></i> Procurar</a></li>
     </ul>
     <p class="links">
-      <a href="http://www.twitter.com/Aristeu_Roriz" target="_new"><i class="fa fa-twitter"></i></a>
-      <a href="https://br.linkedin.com/in/aristeuroriz" target="_new"><i class="fa fa-linkedin"></i></a>
-      <a href="https://plus.google.com/110915414607247343567/" target="_new"><i class="fa fa-google-plus"></i></a>
-      <a href="https://github.com/aristeuroriz" target="_new"><i class="fa fa-github-alt"></i></a>
-      <a href="http://pt.stackoverflow.com/users/25272/aristeu-roriz" target="_new"><i class="fa fa-stack-overflow"></i></a>
-      <a href="http://aristeuroriz.github.io/feed.xml" target="_new"><i class="fa fa-rss"></i></a>
+      <a href="http://www.twitter.com/Aristeu_Roriz" target="_new"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="https://br.linkedin.com/in/aristeuroriz" target="_new"><i class="fa fa-linkedin fa-2x"></i></a>
+      <a href="https://plus.google.com/110915414607247343567/" target="_new"><i class="fa fa-google-plus fa-2x"></i></a>
+      <a href="https://github.com/aristeuroriz" target="_new"><i class="fa fa-github-alt fa-2x"></i></a>
+      <a href="http://pt.stackoverflow.com/users/25272/aristeu-roriz" target="_new"><i class="fa fa-stack-overflow fa-2x"></i></a>
+      <a href="http://aristeuroriz.github.io/feed.xml" target="_new"><i class="fa fa-rss fa-2x"></i></a>
     </p>
   </div>
 </nav>
@@ -86,7 +86,7 @@
             <h1 class="header author-header" itemprop="headline">aristeu roriz</h1>
 
             <div class="author-text">
-                Olá! Eu sou o Aristeu e este é meu blog pessoal. Aqui você encontra alguns tutoriais e dicas de algumas tecnologias que eu fuço por aí. Só pra deixar um pouco mais claro, curto muito Ruby e seus frameworks (Rails, Jekyll, etc). Sou fã de arduino e outras plataformas de prototipagem. Então é isso... Enjoy! ;-)
+                Olá! Eu sou o Aristeu e este é meu blog. Sou profissional de TI e posto tutoriais e dicas de algumas tecnologias que eu mexo por aí. Curto muito Ruby e seus frameworks (Rails, Jekyll, etc). Sou fã de arduino, raspberry pi e outras plataformas de prototipagem. Então é isso... Enjoy! ;-)
             </div>
 
             <div class="links">
