--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -85,9 +85,9 @@
 
 			<div class="row-fluid">
 
-					<a class="col-md-6" href="http://musclesys.com.br" target="_blank"><img class="image-responsive" src="/portfolio/ms_icon_1024.png" alt="MuscleSys" width="150px" height="150px"></a>
+					<a class="col-md-6 center-block" href="http://musclesys.com.br" target="_blank"><img class="image-responsive" src="/portfolio/ms_icon_1024.png" alt="MuscleSys" width="150px" height="150px"></a>
 
-					<a class="col-md-6" href="http://arneti.com.br" target="_blank" style="padding-top:9%;"><img class="image-responsive" src="/portfolio/arneti.png" alt="Arneti Tecnologia" width="100%" height="100%"></a>
+					<a class="col-md-6 center-block" href="http://arneti.com.br" target="_blank" style="padding-top:9%;"><img class="image-responsive" src="/portfolio/arneti.png" alt="Arneti Tecnologia" width="100%" height="100%"></a>
 
 			</div>
 
