--- a/contato/index.html
+++ b/contato/index.html
@@ -145,7 +145,7 @@
 
 <script type="text/javascript">
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', '']);
+  _gaq.push(['_setAccount', 'UA-63586932-1']);
           _gaq.push(['_trackPageview']);
   (function () {
       var ga = document.createElement('script');
