--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <meta name="keywords" content="aristeu,roriz,blog,ruby,rails,ruby on rails,jekyll,desenvolvimento,web,analise,sistemas,aplicativos,java,programação,bootstrap,html,css,javascript">
 
+<!-- para o Twitter Card-->
+<meta name="twitter:card" value="summary">
+
 <meta name="google-site-verification" content="HLREmMD210WdXoJaO_0DkDH3KPqD5ymjUj8_rCMm7ps" />
 
 <link rel="profile" href="http://gmpg.org/xfn/11" />
@@ -96,7 +99,7 @@
             <div class="links">
                 <a href="http://www.twitter.com/Aristeu_Roriz" target="_new"><i class="fa fa-twitter fa-2x"></i></a>
                 <a href="https://br.linkedin.com/in/aristeuroriz" target="_new"><i class="fa fa-linkedin fa-2x"></i></a>
-                <a href="https://plus.google.com/110915414607247343567/" target="_new"><i class="fa fa-google-plus fa-2x"></i></a>
+                <a href="https://plus.google.com/110915414607247343567/" rel='publisher' target="_new"><i class="fa fa-google-plus fa-2x"></i></a>
                 <a href="https://github.com/aristeuroriz" target="_new"><i class="fa fa-github-alt fa-2x"></i></a>
                 <a href="http://pt.stackoverflow.com/users/25272/aristeu-roriz" target="_new"><i class="fa fa-stack-overflow fa-2x"></i></a>
                 <a href="feed.xml" target="_new"><i class="fa fa-rss fa-2x"></i></a>
