Alteração de título

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>aristeu roriz</title>
+<title>blog do aristeu</title>
 <meta name="description" content="Desenvolvimento Web & IoT - Internet of Things">
 
 <link rel="author" href="https://plus.google.com/110915414607247343567/"/>
@@ -63,7 +63,7 @@
 
   <nav id="my-menu">
   <div>
-    <p>aristeu roriz</p>
+    <p>blog do aristeu</p>
     <ul class="pages">
       <li><a href="/"><i class="fa fa-home fa-2x"></i>Home</a></li>
       <li><a href="/posts/"><i class="fa fa-archive fa-2x"></i>Todos os posts</a></li>
@@ -96,10 +96,10 @@
         <div class="col-md-12 main content-panel">
 
             <div class="gravatar">
-                <img src="https://s.gravatar.com/avatar/cbe2920bd641d686f81393eabc3a85aa?s=300" class="img-circle about-image" height="150" width="150" alt="aristeu roriz" />
+                <img src="https://s.gravatar.com/avatar/cbe2920bd641d686f81393eabc3a85aa?s=300" class="img-circle about-image" height="150" width="150" alt="blog do aristeu" />
             </div>
 
-            <h1 class="header author-header" itemprop="headline">aristeu roriz</h1>
+            <h1 class="header author-header" itemprop="headline">blog do aristeu</h1>
 
             <div class="author-text">
                 Olá! Eu sou o Aristeu e este é meu blog. Sou profissional de TI e posto tutoriais e dicas de algumas tecnologias que eu mexo por aí. Curto muito Ruby e seus frameworks (Rails, Jekyll, etc). Sou fã de arduino, raspberry pi e outras plataformas de prototipagem. Então é isso... Enjoy! ;-)
