--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h1 class="header author-header" style="font-size: 300%;" itemprop="headline">aristeu roriz blog</h1>
 
             <div class="author-text">
-                Olá! Eu sou o Aristeu e este é meu blog. Sou profissional de TI e posto tutoriais e dicas de algumas tecnologias que eu mexo por aí. Curto muito Ruby e seus frameworks (Rails, Jekyll, etc). Sou fã de arduino, raspberry pi e outras plataformas de prototipagem. Então é isso... Enjoy! ;-)
+                Olá! Eu sou o Aristeu e este é meu blog. <br> Sou profissional de TI e posto tutoriais e dicas de algumas tecnologias que eu mexo por aí. Vou procurar falar também de empreendedorismo. Curto muito Ruby e seus frameworks (Rails, Jekyll, etc). Sou fã de arduino, raspberry pi e outras plataformas de prototipagem. Então é isso... Enjoy! ;-)
             </div>
 
             <div class="links">
